Stop doing special child insertions if InsertNodeAtPoint() fails, continue with the generic insertion instead. b=478725 r+sr=peterv